objects/SupportTestObject__c.object
<CustomObject>
    <fields>
        <fullName>Sample_Date__c</fullName>
        <label>Sample Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Number__c</fullName>
        <label>Sample Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Text__c</fullName>
        <label>Sample Text</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportTest_Account__c</fullName>
        <label>SupportTest_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SupportTestObject</relationshipLabel>
        <relationshipName>SupportTestObject</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SupportTestObject</label>
    <nameField>
        <label>SupportTestObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SupportTestObject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>